--- a/realtime-dwd/pom.xml
+++ b/realtime-dwd/pom.xml
@@ -15,6 +15,8 @@
         <module>realtime-dwd-base-log</module>
         <module>realtime-dwd-interaction-comment-info</module>
         <module>realtime-dwd-trade-cart-add</module>
+        <module>realtime-dwd-trade-order-detail</module>
+        <module>realtime-dwd-trade-order-cancel-detail</module>
     </modules>
 
     <properties>
