--- a/realtime-dwd/pom.xml
+++ b/realtime-dwd/pom.xml
@@ -17,6 +17,8 @@
         <module>realtime-dwd-trade-cart-add</module>
         <module>realtime-dwd-trade-order-detail</module>
         <module>realtime-dwd-trade-order-cancel-detail</module>
+        <module>realtime-dwd-trade-order-pay-suc-detail</module>
+        <module>realtime-dwd-base-db</module>
     </modules>
 
     <properties>
