--- a/realtime-dws/realtime-dws-traffic-vc-ch-ar-is_new-page-view-window/pom.xml
+++ b/realtime-dws/realtime-dws-traffic-vc-ch-ar-is_new-page-view-window/pom.xml
@@ -5,32 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>www.lubb</groupId>
-        <artifactId>gmall-realtime</artifactId>
+        <artifactId>realtime-dws</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>realtime-dws</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>realtime-dws-traffic-source-keyword-page-view-window</module>
-        <module>realtime-dws-traffic-vc-ch-ar-is_new-page-view-window</module>
-        <module>realtime-dws-traffic-home-detail-page-view-window</module>
-    </modules>
+    <artifactId>realtime-dws-traffic-vc-ch-ar-is_new-page-view-window</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>www.lubb</groupId>
-            <artifactId>realtime-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-
-    </dependencies>
 
 </project>
