--- a/realtime-dws/pom.xml
+++ b/realtime-dws/pom.xml
@@ -15,6 +15,8 @@
         <module>realtime-dws-traffic-source-keyword-page-view-window</module>
         <module>realtime-dws-traffic-vc-ch-ar-is_new-page-view-window</module>
         <module>realtime-dws-traffic-home-detail-page-view-window</module>
+        <module>realtime-dws-user-user-login-window</module>
+        <module>realtime-dws-user-user-register-window</module>
     </modules>
 
     <properties>
